--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test-firefox": "ng test --browsers Firefox",
     "test-all": "ng test --browsers Chrome,Firefox",
     "test-coverage": "ng test --watch=false --sourceMap=true  --codeCoverage=true --browsers ChromeHeadless",
+    "api": "node ./server/server.js",
+    "all": "concurrently \"npm run api\" \"npm run start\"",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -38,6 +40,10 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "concurrently": "^5.3.0",
+    "cors": "^2.8.5",
+    "datauri": "^3.0.0",
+    "express": "^4.17.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.0",
